--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background: #f4f4f4;
   color: #222;
-  line-height: 1.5;
-  padding: 0; /* sem espaço extra no topo */
+  line-height: 1.3;
+  padding: 0; 
 }
-
+h2{
+  font-size: 1.3em;
+}
+h3{
+  font-size: 1em;
+}
 
 /* Header */
 header {
   background: #9bc2f9;
-  padding: 8px 20px;
+  padding: 8px 10px;
 }
 
 .nav-br {
@@ -59,7 +64,7 @@ header {
 
 /* Conteúdo */
 main {
-  margin: 15px 20px;
+  margin: 10px 8px;
 }
 
 /* Botão emergência */
@@ -69,11 +74,11 @@ main {
   padding: 15px;
   background: #004aad;
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   border: none;
   border-radius: 8px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   cursor: pointer;
 }
 
@@ -117,7 +122,7 @@ input[type="radio"] {
 
 /* Container manipulação */
 #container-manipulacao {
-  margin-top: 20px;
+  margin-top: 5px;
 }
 
 .item1 {
@@ -126,12 +131,12 @@ input[type="radio"] {
   padding: 15px;
   background: #0097b2;
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .item1:hover {
@@ -142,12 +147,12 @@ input[type="radio"] {
 #container-manipulacao {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 
 .controles-row {
   display: flex;
-  gap: 20px;
+  gap: 10px;
 }
 
 .item2, .item3 {
@@ -250,3 +255,19 @@ button {
 button:hover {
   background-color: #155ab6;
  }
+
+
+#tradutor {
+  margin-top: -30px;
+  margin-right: -5px;
+  padding: 5px 5px;
+  color: white;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  
+ }
+#tradutor img{
+  width: 20px;
+}
+
